Fixed the searchbar on mobile version for the portfolio so that it hides behind the open navbar

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -11,11 +11,13 @@
 #search-button{
   height: fit-content;
   background-color: black;
+  z-index: auto;
 }
 
 #dropdownBtn{
   border-radius: 0;
   background-image: linear-gradient(90deg, #6C6C6C, #2A2A2A);
+  position: static;
 }
 
 #dropdownMenu{
@@ -33,5 +35,7 @@
 @media screen and (max-width: 500px) {
   #search-container {
     width: 88%;
+    position: relative;
+    top: 0.5rem;
 }
 }
